lab1/Test/L1-A-3-83.output
Error Type A at Line 1
Error Type A at Line 20
Error Type A at Line 25
Error Type B at Line 26
Error Type B at Line 26
Error Type B at Line 26
Error Type B at Line 39
Error Type A at Line 40
Error Type B at Line 45
Error Type A at Line 45
