lab1/Test/L1-A-3-83.cmm
float F0Bk13lG0NB8BkDYwX ( struct `Gqnc0Eksf6f zZUF 
  ) {
  if ( - ( - ! luWLqkEOXYD2Y4vb * FMQSHDrlxYxI / Y3xPw_ic 
    + k6YMP4JonTDaJgW ) [ ! APWkLmSoBq * m2IH2qZLkUg6Kt 
    > OQy7v6DHQpL > Y5GZ1o != ZbkPsvaV != wySBSLImUYg 
    < X56T != OF6W <= T4hFlq31dLDxb > ss9K4M4 > hblqlBTXSLwD_0xoWAS 
    < OOfL8ZOPw7 >= m6z5 <= LWnkpDOt4K || VkBjhdNMNuWdTI 
    || YXtnKYOTgQEpDfC8F ] * ! YseYl_MmFB5aR_F8 ( q ) 
    [ jN2 ] / ! LsklI ( i ) . JknPLxYQP3W0dS_ [ E8cqUqAXUk6 
    ] [ VOBkjhsgiom58S ] / - KfFV ( ) / - 2066610389 . 
    xS3HRk7d5g_X * vg ( ) / XhNN . RYlZ1A [ BCNSA9a ] 
    * 2113226042 [ cgru3KjAQzJ ] . b * ! _69 ( ) * Fi_uhbf 
    ( ) . qQB3ddQsgIJ2_sZ [ k6V_FMUe9nWpbbB6 ] [ D7RUhas2yOYrf4q 
    ] / ! ! rE / ! - Z * ! ! MU * - - p - ( ! eeNAB0aGIk2yL6hzI 
    / Phni / w0Lf7fNf * UnhAjXg9wqNfUkz0 / nIhVLD > z8ST2MjOUGKthqS6 
    && EA_m_xS9qaqdwMG && hhP743BYky6 ) [ f ] . AX0nFCKIj 
    + ! ! TG3hV2fyXrD * F6lhibFskuOC5VMxcSvY || - - vs4X 
    / YuMilBu * y4pEo2zl / bDAOHBlj6R_ / mnmWX31 / XdJPGGQr2KUShuO5 
    * I * d7ZQPKq5tKSgC / oD * nZ4zO_BA_LCKF9d / gGtz0SERhkphSYLt 
    * bfJN07cZcmc * Dze2BTLaKIFM * _SVHY \/ pBs3iYiWzB9 
    * ETTrNLsfRwIcoHcOTM1 && aD_1S )   if ( aAd53bDgfFw4bbA 
    )   hgu9o6PpSz7ih ;
else   qbs_HQHm ;

else   if ( &yWVBTPbvDZE8 )   if ( pEgWHzSS6v3UiiNS 
    <= )   if . ( FK5mgSR66KP__jGW )   PPo_Y ( ;




}
int zXRtJXH2o5S5rF [ 357750304 ] [ 1953356470 ] [ 
  1716141358 ] 
;
float ZRi 
;
float ;
struct hov NiLjKts_py3bGb0 ( ) {
  if ( && KJwnJs87 )   if ( SiiZiPzn )   if ( V2ma8YB_xzfZqbCUjq8h 
    ) &  f0o810dde9HKf0 ;



{
  }) }^
